# app/Http/Controllers/CardCloud/ContactController.php
@@ -78,7 +78,7 @@ class ContactController extends Controller
      *              @OA\Property(property="name", type="string", example="Contacto 1"),
      *              @OA\Property(property="alias", type="string", example="Contacto 1"),
      *              @OA\Property(property="institution", type="integer", example="0"),
-     *              @OA\Property(property="account", type="string", example="123456789012345678"),   
+     *              @OA\Property(property="account", type="string", example="123456789012345678"),
      *              @OA\Property(property="client_id", type="string", example="SP0001275"),
      *          )
      *      ),
@@ -189,7 +189,7 @@ class ContactController extends Controller
      *              @OA\Property(property="account", type="string", example="123456789012345678"),
      *              @OA\Property(property="client_id", type="string", example="SP0001275"),
      *              @OA\Property(property="alias", type="string", example="Contacto 1")
-     *         
+     *
      *          )
      *      ),
      *
@@ -268,6 +268,113 @@ class ContactController extends Controller
             return self::success([
                 'message' => 'Contacto eliminado correctamente'
             ]);
+        } catch (Exception $e) {
+            return self::basicError($e->getMessage());
+        }
+    }
+
+    /**
+     * @OA\Patch(
+     *      path="/api/cardCloud/contact/{uuid}",
+     *      tags={"Card Cloud - Contactos"},
+     *      summary="Actualizar contacto",
+     *      description="Actualizar contacto",
+     *      security={{"bearerAuth":{}}},
+     *
+     *      @OA\Parameter(
+     *          name="uuid",
+     *          in="path",
+     *          description="Contact UUID",
+     *          required=true,
+     *          @OA\Schema(type="string")
+     *      ),
+     *
+     *      @OA\RequestBody(
+     *          required=true,
+     *          @OA\JsonContent(
+     *              required={"name", "alias", "institution"},
+     *              @OA\Property(property="name", type="string", example="Contacto 1"),
+     *              @OA\Property(property="alias", type="string", example="Contacto 1"),
+     *              @OA\Property(property="institution", type="integer", example="0"),
+     *              @OA\Property(property="account", type="string", example="123456789012345678"),
+     *              @OA\Property(property="client_id", type="string", example="SP0001275"),
+     *          )
+     *     ),
+     *
+     *      @OA\Response(
+     *          response=200,
+     *          description="Contacto actualizado correctamente",
+     *          @OA\JsonContent(
+     *              @OA\Property(property="contact_id", type="string", example="01935c81-abe0-7238-8635-46a8486259be"),
+     *              @OA\Property(property="name", type="string", example="Contacto 1"),
+     *              @OA\Property(property="institution_id", type="integer", example="0"),
+     *              @OA\Property(property="institution_name", type="string", example="Card Cloud"),
+     *              @OA\Property(property="account", type="string", example="123456789012345678"),
+     *              @OA\Property(property="client_id", type="string", example="SP0001275"),
+     *              @OA\Property(property="alias", type="string", example="Contacto 1")
+     *          )
+     *      ),
+     *
+     *     @OA\Response(
+     *          response=400,
+     *          description="Error al actualizar el contacto",
+     *          @OA\MediaType(mediaType="text/plain", @OA\Schema(type="string", example="Error al actualizar el contacto"))
+     *      ),
+     *
+     *      @OA\Response(
+     *          response=401,
+     *          description="Unauthorized",
+     *          @OA\MediaType(mediaType="text/plain", @OA\Schema(type="string", example="Unauthorized"))
+     *      )
+     * )
+     */
+
+    public function update(Request $request, $uuid)
+    {
+        try {
+            $contact = Contact::where('UserId', $request->attributes->get('jwt')->id)->where('UUID', $uuid)->first();
+            if (!$contact) throw new Exception('Contacto no encontrado o no pertenece al usuario');
+
+            $this->validate($request, [
+                'institution' => 'required',
+                'alias' => 'required',
+                'name' => 'required',
+            ], [
+                'institution.required' => 'El campo institution es obligatorio',
+                'alias.required' => 'El campo alias es obligatorio',
+                'name.required' => 'El campo name es obligatorio',
+                'client_id.required' => 'El campo client_id es obligatorio'
+            ]);
+
+            if ($request->input('institution') == 0) {
+                $this->validate($request, [
+                    'client_id' => 'required',
+                ], [
+                    'client_id.required' => 'El campo client_id es obligatorio'
+                ]);
+
+                $exist = Contact::where('UserId', $request->attributes->get('jwt')->id)->where('ClientId', $request->input('client_id'))->where('UUID', '!=', $uuid)->first();
+                if ($exist) throw new Exception('Ya existe un contacto con el mismo ClientId');
+            } else {
+                $institution = StpInstitutions::where('Code', $request->input('institution'))->first();
+                if (!$institution) throw new Exception('La institución no existe');
+
+                if (strlen($request->input('account')) < 18) throw new Exception('La cuenta CLABE debe tener 18 dígitos');
+                if (strlen($request->input('account')) > 18) throw new Exception('La cuenta CLABE debe tener 18 dígitos');
+
+                $exist = Contact::where('UserId', $request->attributes->get('jwt')->id)->where('Account', $request->input('account'))->where('UUID', '!=', $uuid)->first();
+                if ($exist) throw new Exception('Ya existe un contacto con la misma cuenta CLABE');
+            }
+
+            $contact->update([
+                'Name' => $request->input('name'),
+                'Institution' => $request->input('institution'),
+                'Account' => $request->input('account') ?? "",
+                'Alias' => $request->input('alias'),
+                'ClientId' => $request->input('client_id') ?? "",
+            ]);
+
+            return response()->json(self::contactObject($contact));
         } catch (Exception $e) {
             return self::basicError($e->getMessage());
         }
